# slick

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md
.claude/skills/registry-patterns/: SKILL.md
.github/workflows/: release.yml
crusts/python/: Cargo.toml  pyproject.toml
crusts/python/python/slickit/: __init__.py
crusts/python/python/slickit/libslickit_py.dylib.dSYM/Contents/: Info.plist
crusts/python/python/slickit/libslickit_py.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libslickit_py.dylib.yml
crusts/python/src/: lib.rs
crusts/wasm/: Cargo.toml
crusts/wasm/src/: lib.rs
src/: lib.rs  manifest.rs  registry.rs
