[package]
name = "slickit"
description = "Semantic, LLM-Interpretable Component Kit — typed component system"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mox-labs/slick"
authors = ["Yashodeep Vyas"]

[lib]
name = "slick"

[features]
default = []
manifest = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = [".", "crusts/python", "crusts/wasm"]
default-members = ["."]
