[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "slickit"
description = "Semantic, LLM-Interpretable Component Kit — typed component system for Python"
requires-python = ">=3.11"
dynamic = ["version"]
license = { text = "Apache-2.0" }
authors = [{ name = "Mox Labs" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/mox-labs/slick"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "slickit._native"
